--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -8,7 +8,7 @@
   margin-top: 150px;
   height: 360px;
   width: 300px;
-  border-radius: 300px;
+  border-radius: 50%;
 }
 .hero h1 {
   text-align: center;
