--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -20,6 +20,17 @@ body{
   gap: 60px;
   font-size: 20px;
 }
+.nav-menu li {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+}
+.nav-menu li img {
+  display: flex;
+  margin: auto;
+}
+
 .nav-connect {
   padding: 20px 40px;
   border-radius: 50px;
@@ -30,4 +41,9 @@ body{
 }
 .nav-connect:hover {
   transform: scale(1.05);
+}
+
+.anchor-link {
+  text-decoration: none;
+  color: white;
 }
