--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -20,12 +20,14 @@ body{
   gap: 60px;
   font-size: 20px;
 }
+
 .nav-menu li {
   display: flex;
   flex-direction: column;
   gap: 5px;
   cursor: pointer;
 }
+
 .nav-menu li img {
   display: flex;
   margin: auto;
@@ -46,4 +48,49 @@ body{
 .anchor-link {
   text-decoration: none;
   color: white;
+}
+.nav-mov-close {
+  display: none;
+}
+.nav-mov-open {
+  display: none;
+}
+@media (max-width: 768px) {
+  .navbar {
+    margin: 20px 50px;
+  }
+  .nav-connect {
+    display: none;
+  }
+  .nav-mov-open {
+    display: block;
+    position: fixed;
+    right: 30px;
+  }
+  .nav-mov-close {
+    display: block;
+    position: relative;
+    top: 30px;
+    left: 290px;
+    width: 30px;
+  }
+  .nav-menu {
+    position: fixed;
+    flex-direction: column;
+    align-items: start;
+    top: 0;
+    gap: 30px;
+    background-color: #1f0016;
+    width: 350px;
+    height: 100%;
+    z-index: 2;
+    transform: right 0.5s;
+    right: -350px;
+  }
+  .nav-menu li {
+    font-size: 30px;
+    padding-left: 100px;
+    flex-direction: row;
+    gap: 20px;
+  }
 }
